--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -6,10 +6,10 @@
 .formNumber {
   display: flex;
   flex-direction: column;
-  width: 340px;
+  width: 350px;
   height: 36px;
   border-radius: 6px;
-  margin-bottom: 8px;
+  margin-bottom: 10px;
 }
 .formLabel {
   font-size: 20px;
@@ -21,4 +21,6 @@
   height: 40px;
   justify-content: center;
   margin: auto;
+  color: azure;
+  background-color: rgba(0, 51, 128, 0.405);
 }
