--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,9 +1,12 @@
 .contactButton {
   width: 60px;
-  height: 32px;
-  margin-left: 10px;
+  height: 28px;
+  margin-left: 20px;
   font-size: 14px;
-  padding-top: 4px;
+  padding: 3px;
+  border-radius: 6px;
+  color: azure;
+  background-color: rgba(0, 51, 128, 0.405);
 }
 .item {
   margin-top: 6px;
